# stack_v1

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml  render.yaml  requirements.txt
source_notebook/: stack-v0.1.ipynb  stack-v0.2.ipynb
stack_webapp/: __main__.py  app.py  config.py
stack_webapp/static/css/: stack.css
stack_webapp/static/js/: app.js
stack_webapp/templates/: index.html
stack_webapp/utils/: __init__.py  data_providers.py  hubspot_client.py  table_helpers.py
